[package]
name = "s3-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
# Runtime async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# HTTP serveur
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
http-body = "1"
bytes = "1"

# HTTP client (reqwest avec streaming)
reqwest = { version = "0.13.2", features = ["stream"] }

# SigV4 - re-signature des requêtes
aws-sigv4 = { version = "1", features = ["http1", "sign-http"] }
aws-credential-types = "1"
aws-smithy-runtime-api = { version = "1", features = ["client"] }
http = "1"

# Observabilité / CLI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

# Divers
url = "2"
serde = { version = "1", features = ["derive"] }

# Crypto : AEAD streaming (construction STREAM)
chacha20poly1305 = "0.10"
async-stream = "0.3"
rand = "0.8"
hex = "0.4"
